--- a/JwtWebApi/appsettings.json
+++ b/JwtWebApi/appsettings.json
@@ -4,5 +4,10 @@
       "Default": "Warning"
     }
   },
+  "ConnectionStrings": {
+
+    "sqlConnection": "Data Source=PF0WUYQ1;Initial Catalog=LoginModule;Integrated Security=True;multipleactiveresultsets=True"
+ 
+  },
   "AllowedHosts": "*"
 }
