--- a/JwtWebApi/appsettings.json
+++ b/JwtWebApi/appsettings.json
@@ -6,7 +6,7 @@
   },
   "ConnectionStrings": {
 
-    "sqlConnection": "Data Source=PF0WUYQ1;Initial Catalog=LoginModule;Integrated Security=True;multipleactiveresultsets=True"
+    "sqlConnection": "Data Source=jayampathi-pc;Initial Catalog=JwtLoginModule;Integrated Security=True;multipleactiveresultsets=True"
  
   },
   "AllowedHosts": "*"
