--- a/JwtWebApi/appsettings.json
+++ b/JwtWebApi/appsettings.json
@@ -7,7 +7,13 @@
   "ConnectionStrings": {
 
     "sqlConnection": "Data Source=jayampathi-pc;Initial Catalog=JwtLoginModule;Integrated Security=True;multipleactiveresultsets=True"
- 
+
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtSettings": {
+    "key": "This*Is&A!Long)Key(For%Creating@A$SymmetricKey",
+    "issuer": "http://localhost:57341",
+    "audience": "PTCUsers",
+    "minutesToExpiration": "10"
+  }
 }
